Pathfinding no longer suffocates mobs